--- a/index.css
+++ b/index.css
@@ -38,3 +38,38 @@ body {
     margin-left: 5px;
     margin-right: 5px;
 }
+.nav-menu ul li{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.nav-menu a:hover {
+    color: yellow;
+}
+
+h1{
+    margin-top: 10px;
+    color: #fff;
+
+} 
+
+.row {
+    display: flex;
+
+}
+
+.column {
+    flex: 50%;
+    padding: 20px;
+}
+
+#nosotros, #objetivos {
+    margin: 3%, 6%, 0px, 6%;
+}
+
+#registro {
+    padding-top: 10px ;
+    background: black;
+    color: white;
+    font-size: 16px;
+}
